--- a/views/home.hbs
+++ b/views/home.hbs
@@ -828,7 +828,7 @@
                 </div>
                 <a href="https://www.linkedin.com/in/kirti-gera/">
                   <div class="workshop-speaker">
-                    <img src="img/speakers/kirti.png" alt="">
+                    <img src="img/speakers/kirti.PNG" alt="">
                     <div>
                       <h2>Kirti Gera</h2>
                       <h4>Course Mentor at GeeksforGeeks</h4>
