--- a/views/home.hbs
+++ b/views/home.hbs
@@ -510,7 +510,7 @@
           <div class="section-title">
               <h3 class="title"><span style="color: white;">Prizes</span></h3>
           </div>
-          <div class="overall-prizes show-flexbox" style="margin-top: -35px;">
+          <div class="overall-prizes show-grid" style="margin-top: -35px;">
             <div class="prize-info silver">
               <img src="./img/prizes/first.svg" alt="" />
               <div class="details">
@@ -526,6 +526,13 @@
               </div>
             </div>
             <div class="prize-info bronze">
+              <img src="./img/prizes/third.svg" alt="" />
+              <div class="details">
+                <h2 style="font-family: arial;"><span style="color:#00FFA4">₹</span> 9,000</h2>
+                <h2 style="font-size: 2rem;">3rd Prize</h2>
+              </div>
+            </div>
+             <div class="prize-info bronze">
               <img src="./img/prizes/third.svg" alt="" />
               <div class="details">
                 <h2 style="font-family: arial;"><span style="color:#00FFA4">₹</span> 9,000</h2>
