converted overall prizes to grid layout

--- a/public/css/prizes.css
+++ b/public/css/prizes.css
@@ -95,11 +95,9 @@
 }
 .overall-prizes{
     margin-top: 30px;
-    display: none !important;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content:space-evenly;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 4vw;
 }
 .prize-info, .details{
     display: flex;
@@ -112,6 +110,7 @@
 }
 .details h2{
     font-size: 3.5rem;
+    white-space: nowrap;
 }
 .details h3{
   font-size: 1.5rem;
@@ -264,14 +263,13 @@
 }
 
 
-@media(max-width: 1190px){
+@media(max-width: 1180px){
   .prizes-navbar{
     flex-direction: column;
     align-items: flex-start;
   }
   .overall-prizes{
-    flex-direction: column;
-    align-content: stretch;
+    grid-template-columns: 1fr 1fr;
   }
   .overall-prizes>*{
     width: 95%;
@@ -285,9 +283,6 @@
     left: 0;
     width: 75vw;
   }
-  .silver{
-    margin-top: 30px;
-  }
   .sponsered-tracks, .swags-kit{
     display: grid;
     width: 90vw;
@@ -297,7 +292,7 @@
     transform: scale(0.9);
   }
 }
-@media(max-width: 700px){
+@media(max-width: 768px){
   .sponsered-tracks, .swags-kit{
     width: 80vw;
     grid-template-columns: 1fr;
@@ -305,10 +300,11 @@
   .for-all{
     width: auto;
   }
-}
-@media(max-width: 475px){
   .prizes-container{
     width: 100%;
+  }
+  .overall-prizes{
+    grid-template-columns: 1fr;
   }
   .details h2{
     font-size: 2.5rem;
@@ -326,7 +322,6 @@
     margin-bottom: 15px;
   }
 }
-
 .flip-card-container h4{
   word-spacing: 2px;
   font-size: 17px;
