--- a/views/home.hbs
+++ b/views/home.hbs
@@ -510,7 +510,7 @@
           <div class="section-title">
               <h3 class="title"><span style="color: white;">Prizes</span></h3>
           </div>
-          <div class="overall-prizes show-flexbox" style="margin-top: -35px;">
+          <div class="overall-prizes show-grid" style="margin-top: -35px;">
             <div class="prize-info silver">
               <img src="./img/prizes/first.svg" alt="" />
               <div class="details">
