--- a/views/home.hbs
+++ b/views/home.hbs
@@ -912,11 +912,11 @@
                 </div>
               </a>
 
-              <a href="https://www.linkedin.com/in/anushbhatia/">
+              <a href="https://www.linkedin.com/in/isha-bansal-98670516b">
                 <div class="speaker-card">
-                  <img src="img/mentors/anush.PNG" alt="">
-                  <h1 class="speaker-title">Anush Bhatia</h1>
-                  <h3 class="speaker-designation">Senior Software Engineer<br>Capgemini</h3>
+                  <img src="img/mentors/isha.PNG" alt="">
+                  <h1 class="speaker-title">Isha Bansal</h1>
+                  <h3 class="speaker-designation">Associate Software Engineer<br>Lowe's India</h3>
                 </div>
               </a>
 
@@ -925,6 +925,22 @@
                   <img src="img/mentors/vanshika.PNG" alt="">
                   <h1 class="speaker-title">Vanshika Garg </h1>
                   <h3 class="speaker-designation">Data Scientist <br>Fractal Analytics </h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/anushbhatia/">
+                <div class="speaker-card">
+                  <img src="img/mentors/anush.PNG" alt="">
+                  <h1 class="speaker-title">Anush Bhatia</h1>
+                  <h3 class="speaker-designation">Senior Software Engineer<br>Capgemini</h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/jai-dewani/">
+                <div class="speaker-card">
+                  <img src="img/mentors/jai.PNG" alt="">
+                  <h1 class="speaker-title">Jai Kumar Dewani</h1>
+                  <h3 class="speaker-designation">Software Engineer<br>Zeiss</h3>
                 </div>
               </a>
 
