converted overall prizes to grid layout (#64)
* converted overall prizes to grid layout

* Optimised images with calibre/image-actions

* best freshman hack prize

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: shankhanil007 <shankhanilborthakur@gmail.com>

--- a/views/prizes.hbs
+++ b/views/prizes.hbs
@@ -132,7 +132,7 @@
           <div class="overall-title">
             <h4><span># </span>Overall</h4>
           </div>
-          <div class="overall-prizes show-flexbox">
+          <div class="overall-prizes show-grid">
             <div class="prize-info silver">
               <img src="./img/prizes/first.svg" alt="" />
               <div class="details">
@@ -154,6 +154,13 @@
               <div class="details">
                 <h2 style="font-family: arial;"><span style="color:#00FFA4">₹</span> 9,000</h2>
                 <h2 style="font-size: 2rem;">3rd Prize</h2>
+              </div>
+            </div>
+             <div class="prize-info bronze">
+              <img src="./img/prizes/freshman.svg" alt="" />
+              <div class="details">
+                <h2 style="font-family: arial;"><span style="color:#00FFA4">₹</span> 3,000</h2>
+                <h2 style="font-size: 2rem;">Best Freshman Hack</h2>
               </div>
             </div>
           </div>
