--- a/views/home.hbs
+++ b/views/home.hbs
@@ -843,6 +843,53 @@
 
               <div class="workshop-card">
                 <div class="workshop-title">
+                <h1>Hackathon AMA with Siddharth</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>2/1/2022 &nbsp; 8:00 PM IST</span>
+                </div>
+                </div>
+                <a href="https://www.linkedin.com/in/siddharthdayalwal/">
+                  <div class="workshop-speaker">
+                    <img src="img/speakers/siddharth.jpg" alt="">
+                    <div>
+                      <h2>Siddharth Dayalwal</h2>
+                      <h4>GitHub Campus Expert | DevRel @ Storyblok</h4>
+                    </div>
+                  </div>
+                </a>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div>
+
+
+              <div class="workshop-card">
+                <div class="workshop-title">
+                <h1>Martech - Opportunity for Technology Professionals</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>4/1/2022 &nbsp; 12:30 PM IST</span>
+                </div>
+                </div>
+                <a href="https://www.linkedin.com/company/tatvic/">
+                  <div class="workshop-speaker">
+                    <img src="img/speakers/ashish.png" alt="">
+                    <div>
+                      <h2>Ashish Mishal</h2>
+                      <h4>Chief Technology Officer at Tatvic</h4>
+                    </div>
+                  </div>
+                </a>
+                <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div>
+
+              <div class="workshop-card">
+                <div class="workshop-title">
                 <h1>Using Vonage Video Express and Video API</h1>
                 <div class="event-dates">
                   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
@@ -909,6 +956,14 @@
                   <img src="img/mentors/naitik.PNG" alt="">
                   <h1 class="speaker-title">Naitik Dodia</h1>
                   <h3 class="speaker-designation">Machine Learning Engineer<br>Amazon</h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/chhavisharma4/">
+                <div class="speaker-card">
+                  <img src="img/mentors/chhavi.PNG" alt="">
+                  <h1 class="speaker-title">Chhavi Sharma</h1>
+                  <h3 class="speaker-designation">Program Manager 2<br>Microsoft</h3>
                 </div>
               </a>
 
