--- a/views/home.hbs
+++ b/views/home.hbs
@@ -642,7 +642,110 @@
             </div>
           </div>
         </div>
+        <div class="schedule-navbar">
+              <div class="7-jan active days">7th Jan</div>
+              <div class="8-jan days">8th Jan</div>
+              <div class="9-jan days">9th Jan</div>
+            </div>
+            <div class="7-jan hack-schedule active">
+              <div class="schedule-row">
+                <div class="schedule-time">
+                  <h1>7:00 PM</h1>
+                  <h3>7th Jan</h3>
+                </div>
+                <div class="schedule-event">
+                  <h2>Opening Ceremony</h2>
+                  <p>The inauguration ceremony of DotSlash 5.0 will start. Participants will be briefed on rules and regulations, schedules, and other information regarding the hackathon.</p>
+                </div>
+              </div>
+              <div class="schedule-row">
+                <div class="schedule-time">
+                  <h1>9:00 PM</h1>
+                  <h3>7th Jan</h3>
+                </div>
+                <div class="schedule-event">
+                  <h2>Virtual Onboarding</h2>
+                  <p>Teams will be checked in before the main event commences. Participants are requested to make sure that their team members are present and all the prerequisites for the event are fulfilled.</p>
+                </div>
+              </div>
+              <div class="schedule-row">
+                <div class="schedule-time">
+                  <h1>10:00 PM</h1>
+                  <h3>7th Jan</h3>
+                </div>
+                <div class="schedule-event">
+                  <h2>Opening Ceremony</h2>
+                  <p>The inauguration ceremony of DotSlash 5.0 will start. Participants will be briefed on rules and regulations, schedules, and other information regarding the hackathon.</p>
+                </div>
+              </div>
+            </div>
+            <div class="8-jan hack-schedule">
+              <div class="schedule-row">
+                <div class="schedule-time">
+                  <h1>7:00 PM</h1>
+                  <h3>8th Jan</h3>
+                </div>
+                <div class="schedule-event">
+                  <h2>Opening Ceremony</h2>
+                  <p>The inauguration ceremony of DotSlash 5.0 will start. Participants will be briefed on rules and regulations, schedules, and other information regarding the hackathon.</p>
+                </div>
+              </div>
+              <div class="schedule-row">
+                <div class="schedule-time">
+                  <h1>9:00 PM</h1>
+                  <h3>8th Jan</h3>
+                </div>
+                <div class="schedule-event">
+                  <h2>Virtual Onboarding</h2>
+                  <p>Teams will be checked in before the main event commences. Participants are requested to make sure that their team members are present and all the prerequisites for the event are fulfilled.</p>
+                </div>
+              </div>
+              <div class="schedule-row">
+                <div class="schedule-time">
+                  <h1>10:00 PM</h1>
+                  <h3>8th Jan</h3>
+                </div>
+                <div class="schedule-event">
+                  <h2>Opening Ceremony</h2>
+                  <p>The inauguration ceremony of DotSlash 5.0 will start. Participants will be briefed on rules and regulations, schedules, and other information regarding the hackathon.</p>
+                </div>
+              </div>
+            </div>
+            <div class="9-jan hack-schedule">
+              <div class="schedule-row">
+                <div class="schedule-time">
+                  <h1>7:00 PM</h1>
+                  <h3>9th Jan</h3>
+                </div>
+                <div class="schedule-event">
+                  <h2>Opening Ceremony</h2>
+                  <p>The inauguration ceremony of DotSlash 5.0 will start. Participants will be briefed on rules and regulations, schedules, and other information regarding the hackathon.</p>
+                </div>
+              </div>
+              <div class="schedule-row">
+                <div class="schedule-time">
+                  <h1>9:00 PM</h1>
+                  <h3>9th Jan</h3>
+                </div>
+                <div class="schedule-event">
+                  <h2>Virtual Onboarding</h2>
+                  <p>Teams will be checked in before the main event commences. Participants are requested to make sure that their team members are present and all the prerequisites for the event are fulfilled.</p>
+                </div>
+              </div>
+              <div class="schedule-row">
+                <div class="schedule-time">
+                  <h1>10:00 PM</h1>
+                  <h3>9th Jan</h3>
+                </div>
+                <div class="schedule-event">
+                  <h2>Opening Ceremony</h2>
+                  <p>The inauguration ceremony of DotSlash 5.0 will start. Participants will be briefed on rules and regulations, schedules, and other information regarding the hackathon.</p>
+                </div>
+              </div>
+            </div>
       </div>
+
+
 
       <!-- section title -->
       <div id="sessions" class="section" style="margin-top: 80px;">
@@ -1621,6 +1724,7 @@
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/schedule-navbar.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"
     ></script>
