update session details

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -841,7 +841,7 @@
                 </button>
               </div>
 
-              <div class="workshop-card">
+              {{!-- <div class="workshop-card">
                 <div class="workshop-title">
                 <h1>Hackathon AMA with Siddharth</h1>
                 <div class="event-dates">
@@ -859,6 +859,29 @@
                   </div>
                 </a>
                 <button class="session-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
+                  Session Link
+                </button>
+              </div> --}}
+
+              <div class="workshop-card">
+                <div class="workshop-title">
+                <h1>Covering the gap between Web2 & Web3</h1>
+                <div class="event-dates">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7 11h2v2H7v-2zm14-5v14c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2l.01-14c0-1.1.88-2 1.99-2h1V2h2v2h8V2h2v2h1c1.1 0 2 .9 2 2zM5 8h14V6H5v2zm14 12V10H5v10h14zm-4-7h2v-2h-2v2zm-4 0h2v-2h-2v2z"/></svg>
+                  <span>3/1/2022 &nbsp; 9:00 PM IST</span>
+                </div>
+                </div>
+                <a href="https://onec.in/">
+                  <div class="workshop-speaker">
+                    <img src="img/speakers/onecdot.png" alt="">
+                    <div>
+                      <h2>Onecdot</h2>
+                      <h4>Aman pandey & Hrishabh sharma</h4>
+                    </div>
+                  </div>
+                </a>
+                <button class="session-link"  onClick="javascript:window.open('https://meet.google.com/sma-kdok-vfn', '_blank');">
                   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
                   Session Link
                 </button>
@@ -1534,9 +1557,9 @@
               <div class="col-sm-4">
                 <div class="contact">
                   <h3>Mobile</h3>
-                  <a href="tel:+91 97129 89101">&nbsp;&nbsp;<b>+91 89508 20378</b>
+                  <a href="tel:+91 89508 20378">&nbsp;&nbsp;<b>+91 89508 20378</b>
                     - Keshav Gautam</a><br />
-                  <a href="tel:+91 70166 05695"><b>+91 79906 30623</b>
+                  <a href="tel:+91 79906 30623"><b>+91 79906 30623</b>
                     - Gaurav Kumar</a>
                 </div>
               </div>
