--- a/views/home.hbs
+++ b/views/home.hbs
@@ -874,7 +874,7 @@
                 </div>
                 <a href="https://onec.in/">
                   <div class="workshop-speaker">
-                    <img src="img/speakers/onecdot.png" alt="">
+                    <img src="img/speakers/onecdot.PNG" alt="">
                     <div>
                       <h2>Onecdot</h2>
                       <h4>Aman pandey & Hrishabh sharma</h4>
