late date fixes

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -225,7 +225,7 @@
                   <div class="message__content">What's the last date of registration?</div>
                 </div>
                 <div class="message message--server">
-                  <div class="message__content">4<sup>th</sup>Jan 2022</div>
+                  <div class="message__content">3 PM 7<sup>th</sup>Jan'22</div>
                 </div>
                 <div class="message message--browser">
                   <div class="message__content">What is the mode of conduct?</div>
@@ -580,7 +580,7 @@
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">26th Dec - 6th Jan 11:59 pm </div>
+                <div class="timeline-time">26th Dec - 7th Jan 3:00 pm </div>
                 <div class="timeline-content">
                   <h4>Idea Submission </h4>
                   <p>
@@ -590,7 +590,7 @@
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">6th Jan 11:59 pm</div>
+                <div class="timeline-time">7th Jan 3:00 pm</div>
                 <div class="timeline-content">
                   <h4>Registration Ends</h4>
                   <p>
