--- a/views/home.hbs
+++ b/views/home.hbs
@@ -164,6 +164,8 @@
                <div class="hero__content__banner_slogan">
                 <div>
                   <h2 ><span>7<sup>th</sup> - 9<sup>th</sup></span>Jan 2022</h2>
+                  <h4>Last date to register : 3 pm 7<sup>th</sup>Jan</h4>
+                  <h4>Hurry Up Folks!</h4>
                 </div>
               </div>
             {{!-- <form class="notify-me" action="/api/email" method="POST">
