--- a/views/home.hbs
+++ b/views/home.hbs
@@ -227,7 +227,7 @@
                   <div class="message__content">What's the last date of registration?</div>
                 </div>
                 <div class="message message--server">
-                  <div class="message__content">3 PM 7<sup>th</sup>Jan'22</div>
+                  <div class="message__content">3 pm 7<sup>th</sup>Jan</div>
                 </div>
                 <div class="message message--browser">
                   <div class="message__content">What is the mode of conduct?</div>
