removed community partners

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1184,7 +1184,7 @@
 
 
         <!-- Community Partners -->
-        <div id="community-partners">
+        {{!-- <div id="community-partners">
           <!-- container -->
           <div class="container">
             <div class="row">
@@ -1211,7 +1211,7 @@
             </div>
             <!-- /container -->
           </div>
-        </div>
+        </div> --}}
         <!-- /community partners  -->
 
        
