add updated schedule

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -632,11 +632,81 @@
               </div>
 
               <div class="timeline-row">
+                <div class="timeline-time">7th Jan 11:00 pm </div>
+                <div class="timeline-content">
+                  <h4>Onecdot API Demo</h4>
+                  <p>
+                    Team Onecdot will give walkthrough on how to use it's API. Participants can also get their queries resolved regarding Onecdot's sponsored track prize.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">8th Jan 10:00 am </div>
+                <div class="timeline-content">
+                  <h4>Mentoring Session - I</h4>
+                  <p>
+                    Mentors will visit each of the participating teams present. They will provide guidance and counsel to the teams on how they can improvise their idea or the hack they are working on.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">8th Jan 6:00 pm </div>
+                <div class="timeline-content">
+                  <h4>Fun Activities</h4>
+                  <p>
+                    There will be some fun games and exciting giveaways. Hackers can participate in these activities whenever they feel the need to take a break! The details for the same will be available on our discord server.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">8th Jan 10pm </div>
+                <div class="timeline-content">
+                  <h4>Q&A with Organisers</h4>
+                  <p>
+                    Participants can connect with the hackathon organisers and get their queries resolved. Moreover a session on Devfolio submission requirements will be conducted.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
                 <div class="timeline-time">9th Jan 10:00 am </div>
                 <div class="timeline-content">
                   <h4>Final Submission - Coding Time Ends</h4>
                   <p>
                     This is the end of the 36 hour coding period. Teams will have to submit their final work. After this point, no addition to the project will be allowed.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">9th Jan 10:00 am </div>
+                <div class="timeline-content">
+                  <h4>Mentoring Session - II</h4>
+                  <p>
+                    Mentors will visit the teams again to evaluate their work. The participants are expected to pitch their ideas as well as show a demo of their hack within a stipulated amount of time.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">9th Jan 4:00 pm </div>
+                <div class="timeline-content">
+                  <h4>Presentation Round</h4>
+                  <p>
+                    The top 10 teams will have to present their ideas and projects in front of judges. The Showdown Begins!
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">9th Jan 7:00 pm </div>
+                <div class="timeline-content">
+                  <h4>Closing Ceremony</h4>
+                  <p>
+                    The winners of DotSlash 5.0 will be announced. Prizes for the winners will be revealed followed by the Vote of thanks.
                   </p>
                 </div>
               </div>
